# doubao-ime-win

./: Cargo.toml  README.md
PRD/: README.md  adr-0001-tsf-tip-architecture.md  core-shell-boundary.md  milestone-1-roadmap.md  project-structure.md  task-list.md  technical-architecture.md  tsf-tip-completion-plan.md  windows-ime-requirements.md
crates/tsf-tip/: Cargo.toml
crates/tsf-tip/src/: lib.rs  windows_tip.rs
scripts/: check-tip-registration.ps1  register-tip.ps1  unregister-tip.ps1
src/: lib.rs
src/business/: voice_controller.rs
src/voice_core/: mod.rs
