[package]
name = "doubao-tsf-tip"
version = "0.1.0"
edition = "2021"
authors = ["Doubao Voice Input Team"]
description = "Windows TSF Text Input Processor shell for Doubao Voice Input"
license = "MIT"

[lib]
name = "doubao_tsf_tip"
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_TextServices",
] }
